Change Notes
============

2010-07-14 jbornema
	- DimensionBehavior now serializable
	- IUserObject added implemented by KeyExt and CellExt
	- Key supports uses DimensionBehavior in isSubKey and isSubKeyElement methods
	- Cell.toString, .hashCode and .equals added
	- CellExt missing writeExternal and readExternal added
	- Cube.writeExternal fixed DimensionBehavior usage
	- CubeFlexCalc removed unused code and fixed DimensionBehavior usage in .writeExternal
	- CubePreCache fixed DimensionBehavior usage
	- DefaultDimensionResolver(ICube) added to support DimensionBehavior
	- CountLoader cleaned: in future CountLoader will use a function instead of measure

2010-07-05 jbornema
	- CubeUtil.parseDimensionElementId(String, boolean) and CubeUtil.parseDimensionElementId(String, IDimension, boolean) added
	  to support auto create elements.

2010-06-29 FLI
	- Added possibility to set dimension behaviors, i.e. NO_SPLASH, NO_AGGREAGATION or FLAT

2010-05-17 FLI
	- Improved JDBCSerializerUtil performance of restoring dimension elements from the database
	
2010-05-14 FLI
	- Added possibility to seal a dimension to prevent changes. This will unfortunately cause an incompatibility
	  to older serialized datapools. 
	  
2010-05-11 FLI
	- Fixed a problem in the Flex cube cache in combination with mutable keys
	
2010-03-08 jbornema
	- DataPool: createDimension(String key) and createMeasure(String key) return types changed to interface. 

2010-02-23 kstein (commited by FLI)
	- Added the possibility to create temporary (softReferenced) cubes.

2010-02-08 kstein (commited by FLI)
	- Added ICubeCacheControl.buildCacheFromCube(ICube)

2009-11-17 jbornema
	- IKeyProvider implements required Serialized interface
	- FileDataPoolStorageProvider saved the data pool still in zip format even if the deserialization of zip failed (due to corrupt file or so) 

2009-11-12 jbornema
	- ICellProvider and IKeyProvider added to support customer Key and Cell extensions