@@ -4,6 +4,7 @@
 package de.xwic.cube;
 
 import java.io.Serializable;
+import java.util.Collection;
 import java.util.HashSet;
 
 /**
@@ -17,11 +18,41 @@ public interface IUserObject {
 	 * @author JBORNEMA
 	 *
 	 */
-	public static class ObjectsHelper {
+	public final static class Helper {
+		/**
+		 * Returns the first object instanceof IUserObject
+		 * @param objects
+		 * @return
+		 */
+		public static IUserObject getFirstUserObject(Object... objects) {
+			for (Object object : objects) {
+				if (object instanceof IUserObject) {
+					return (IUserObject)object;
+				}
+			}
+			return null;
+		}
+		/**
+		 * If userObject is instanceof Collection<?> it returns the size() otherwise userObject != null ? 1 : 0
+		 * @param userObject
+		 * @return
+		 */
+		public static Double getSize(Serializable userObject) {
+			if (userObject instanceof Collection<?>) {
+				return (double)((Collection<?>)userObject).size();
+			}
+			return userObject != null ? 1d : null;
+		}
+		/**
+		 * Adds userObject to userObjects and return a Set if more objects exists or just userObject if it's the only one.
+		 * @param userObjects
+		 * @param userObject
+		 * @return
+		 */
 		@SuppressWarnings("unchecked")
 		public static Serializable addObjects(Serializable userObjects, Serializable userObject) {
 			HashSet<Object> newObjects = null;
-			if (userObject instanceof HashSet<?>) {
+			if (userObject instanceof Collection<?>) {
 				newObjects = (HashSet<Object>)userObject;
 			}
 			if (userObjects == null) {
